--- a/inst/testing.qmd
+++ b/inst/testing.qmd
@@ -19,6 +19,12 @@ beta_yprev = c(0.006164718, 3.668244235, 4.756980385, 7.696745715, 11.098149358,
 beta_t = -0.02
 beta_tx = 0
 beta_t_tx = -0.02
+
+cutpoints = c(-2, 1, 2, 3, 4, 5, 6)
+beta_yprev = seq(0.5, 6.5, 1)
+beta_t = -0.02
+beta_tx = 0
+beta_t_tx = -0.04
 ```
 
 ## Generate data
@@ -31,10 +37,10 @@ df <- generate_dataset(cutpoints = cutpoints,
                        beta_t_tx = beta_t_tx,
                        tx_end = 28,
                        baseline_y = 4,
-                       times = 1:14,
+                       times = 1:28,
                        tx_type = "linear",
                        absorb = 8,
-                       n_subjects = 5000) 
+                       n_subjects = 50000) 
 ```
 
 ```{r}
@@ -52,6 +58,7 @@ df |>
   scale_color_brewer(palette = "Dark2") +
   scale_y_continuous(breaks = seq(0, 1, by=0.1)) +
   coord_cartesian(ylim = c(0,1)) +
+  facet_wrap(~tx) +
   labs(x = "Study day",
        y = "Empirical State Occupancy Probability",
        color = "State",
@@ -96,35 +103,15 @@ df <- otm::generate_dataset(cutpoints = cutpoints,
                        beta_tx = beta_tx,
                        beta_t_tx = beta_t_tx,
                        tx_end = 14,
-                       baseline_y = 3,
+                       baseline_y = 4,
                        times = 1:14,
                        tx_type = "linear",
-                       absorb = 5,
-                       n_subjects = 200)
+                       absorb = 8,
+                       n_subjects = 2000)
 ```
 
 ```{r}
-fig <-
-df |>
-  mutate(y = as.factor(y)) |>
-  group_by(t, y, tx) |>
-  count() |>
-  group_by(t, tx) |>
-  mutate(n = n / sum(n)) |>
-  ggplot() +
-  aes(x = t, y = n, color=y, linetype=tx) +
-  geom_line() +
-  geom_point(alpha=0.6, size=0.5) +
-  scale_x_continuous(breaks = unique(df$t)) +
-  scale_color_brewer(palette = "Dark2") +
-  scale_y_continuous(breaks = seq(0, 1, by=0.1)) +
-  coord_cartesian(ylim = c(0,1)) +
-  labs(x = "Study day",
-       y = "Empirical State Occupancy Probability",
-       color = "State",
-       linetype = "Treatment") +
-  cowplot::theme_minimal_hgrid(font_size = 12,
-                               font_family = "Source Sans Pro")
+otm:::plot_empirical_sops(df) + facet_wrap(~tx)
 ```
 
 ```{r}
